@@ -1,0 +1,4 @@
+Warning: variable '$data' not declared at line 9
+Warning: variable '$summer' not declared at line 11
+Warning: variable '$bytes' not declared at line 15
+The MD5 value of test.jar is: 17bc99c1ea48937e2f702c7ef1c5025c
